Add a new page call profile management, link it with edit button in account page, tried to add it in main.views and main.urls, failed, so undo all the changes on main.views, main.urls

--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -13,7 +13,7 @@
                     <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" alt="Avatar" class="rounded-full w-24 h-24">
                 </figure>
                 <div class="card-actions flex flex-col space-y-6">
-                    <button class="btn btn-primary w-full">Edit Profile</button>
+                    <a href="/profile-management" class="btn btn-primary w-full">Edit Profile</a>
                     <button class="btn btn-secondary w-full">Logout</button>
                 </div>
             </div>
