Point to account_management

--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -71,7 +71,7 @@
                     <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" alt="Avatar" class="rounded-full w-24 h-24">
                 </figure>
                 <div class="card-actions flex flex-col space-y-6">
-                    <a href="/profile-management" class="btn btn-primary w-full">Edit Profile</a>
+                    <a href="/account_management" class="btn btn-primary w-full">Edit Profile</a> <!--Refer to profile management page-->
                     <button class="btn btn-secondary w-full">Logout</button>
                 </div>
             </div>
@@ -91,7 +91,6 @@
                     <div class="collapse-title text-xl font-medium">Public Information</div>
                     <div class="collapse-content">
                         <p class="text-lg"><span class="underline decoration-dotted">Name:</span> John Doe</p>
-                        <p class="text-lg"><span class="underline decoration-dotted">Email:</span> john.doe@example.com</p>
                         <p class="text-lg"><span class="underline decoration-dotted">Joined:</span> January 1, 2020</p>
                     </div>
                 </div>
@@ -99,6 +98,7 @@
                     <input type="radio" name="my-accordion-2" />
                     <div class="collapse-title text-xl font-medium">Private Information</div>
                     <div class="collapse-content">
+                        <p class="text-lg"><span class="underline decoration-dotted">Email:</span> john.doe@example.com</p>
                         <p class="text-lg"><span class="underline decoration-dotted">Address:</span> 123 Main St</p>
                         <p class="text-lg"><span class="underline decoration-dotted">Phone:</span> (123) 456-7890</p>
                     </div>
