update envent management to look better

--- a/kindred_causes/main/static/css/output.css
+++ b/kindred_causes/main/static/css/output.css
@@ -1635,6 +1635,9 @@
   .m-1 {
     margin: calc(var(--spacing) * 1);
   }
+  .m-2 {
+    margin: calc(var(--spacing) * 2);
+  }
   .mx-auto {
     margin-inline: auto;
   }
