--- a/kindred_causes/main/templates/event_management.html
+++ b/kindred_causes/main/templates/event_management.html
@@ -56,8 +56,10 @@
 </div>
 
 
-  <div> Start Time</div>
+<fieldset class="fieldset">
+  <legend class="fieldset-legend">Event Location</legend>
   <input type="datetime-local" class="input"/>
+</fieldset>
 
   <a role="button" class="btn btn-primary" type="submit" > Create Event</a>
 
