added link to register account on the login page

--- a/kindred_causes/main/templates/login.html
+++ b/kindred_causes/main/templates/login.html
@@ -29,7 +29,11 @@
             title="Must be more than 8 characters, including number, lowercase letter, uppercase letter" />
     </label>
     <p class="validator-hint hidden">
-        Passwords must match
+        Inncorect Password
+    </p>
+    <p>
+        New to Kindred Causes?
+    <a class="link link-primary type="submit" href="{% url 'user_registration' %}"">Create an Account</a>
     </p>
 {% endblock form_content%}
 
