--- a/kindred_causes/main/templates/event_management.html
+++ b/kindred_causes/main/templates/event_management.html
@@ -48,9 +48,9 @@
   <div class="dropdown dropdown-right">
     <div tabindex="0" role="button" class="btn m-1">Select Urgency</div>
     <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
-      <li><a>Urgent</a></li>
-      <li><a>Semi-Urgent</a></li>
-      <li><a>Not Urgent</a></li>
+      <li><a>High</a></li>
+      <li><a>Medium</a></li>
+      <li><a>Low</a></li>
     </ul>
   </div>
 </div>
