--- a/kindred_causes/main/templates/volunteer_history.html
+++ b/kindred_causes/main/templates/volunteer_history.html
@@ -1,5 +1,5 @@
 {% extends 'table.html' %}
-{% block content %}
+{% block table_content %}
 <div class="flex flex-col grow">
   <h1 class="text-center text-2xl font-bold my-4">Volunteer History</h1>
   <table class="table w-full">
@@ -9,6 +9,7 @@
         <th class="border p-2">Description</th>
         <th class="border p-2">Location</th>
         <th class="border p-2">Skills Required</th>
+        <th class="border p-2">Date</th>
         <th class="border p-2">Urgency Level</th>
         <th class="border p-2">Participation Status</th>
       </tr>
@@ -29,6 +30,7 @@
         <td class="border p-2">Help plant and maintain community vegetable garden</td>
         <td class="border p-2">Central Park</td>
         <td class="border p-2">Gardening, Physical Labor</td>
+        <td class="border p-2">6/12/24</td>
         <td class="border p-2">Medium</td>
         <td class="border p-2">Completed</td>
       </tr>
@@ -37,6 +39,7 @@
         <td class="border p-2">Sort and package donated food items</td>
         <td class="border p-2">Local Food Bank</td>
         <td class="border p-2">Organization, Lifting</td>
+        <td class="border p-2">6/15/24</td>
         <td class="border p-2">High</td>
         <td class="border p-2">Registered</td>
       </tr>
@@ -45,6 +48,7 @@
         <td class="border p-2">Assist seniors with basic computer and smartphone usage</td>
         <td class="border p-2">Community Center</td>
         <td class="border p-2">Tech Knowledge, Patience</td>
+        <td class="border p-2">6/19/24</td>
         <td class="border p-2">Low</td>
         <td class="border p-2">In Progress</td>
       </tr>
@@ -53,6 +57,7 @@
         <td class="border p-2">Remove trash and debris from local beach</td>
         <td class="border p-2">Sunset Beach</td>
         <td class="border p-2">None</td>
+        <td class="border p-2">6/20/24</td>
         <td class="border p-2">Medium</td>
         <td class="border p-2">Completed</td>
       </tr>
@@ -61,6 +66,7 @@
         <td class="border p-2">Walk dogs and socialize with shelter animals</td>
         <td class="border p-2">Happy Paws Shelter</td>
         <td class="border p-2">Animal Handling, Compassion</td>
+        <td class="border p-2">6/25/24</td>
         <td class="border p-2">High</td>
         <td class="border p-2">Registered</td>
       </tr>
@@ -68,4 +74,4 @@
     </tbody>
   </table>
 </div>
-{% endblock content %}
+{% endblock table_content %}
