added more space to the event management form text bubbles

--- a/kindred_causes/main/templates/event_management.html
+++ b/kindred_causes/main/templates/event_management.html
@@ -7,18 +7,18 @@
 {% block form_content %}
   
   <fieldset class="fieldset">
-    <legend class="fieldset-legend">Event Name</legend>
-    <input type="text" class="input" placeholder="Enter Event Name" />
+    <legend class="fieldset-legend ">Event Name</legend>
+    <input type="text" class="input w-70" placeholder="Enter Event Name" />
   </fieldset>
 
   <fieldset class="fieldset">
     <legend class="fieldset-legend">Event Description</legend>
-    <textarea class="textarea h-24 text-wrap" placeholder="Enter Event Description"></textarea>
+    <textarea class="textarea h-24 w-70 text-wrap" placeholder="Enter Event Description"></textarea>
   </fieldset>
   
   <fieldset class="fieldset">
     <legend class="fieldset-legend">Event Location</legend>
-    <input type="text" class="input" placeholder="Enter Location" />
+    <input type="text" class="input w-70" placeholder="Enter Location" />
   </fieldset>
 
 <div>
